--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Counter Example</title>
-  <link rel="stylesheet" href="reset.css">
-</head>
-<body>
-  <div id="root"></div>
-  <script src="index.js"></script>
-</body>
+  <head>
+    <title>Meds</title>
+    <link rel="stylesheet" href="reset.css">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="index.js"></script>
+  </body>
 </html>
