--- a/src/app.html
+++ b/src/app.html
@@ -8,14 +8,14 @@
   <Header menu='{{ menu }}' route='{{ route }}' on:navigate='navigate(event)' />
 
   <article class='page'>
-    {{#if route === '/meds'}}
+    {{#if route === '/'}}
       <MedsPage
         on:updateState='updateState(event)'
-        meds='{{ state.meds.list }}'
-        sortBy='{{ state.meds.sortBy }}'
+        meds='{{ state.meds.list || {} }}'
+        sortBy='{{ state.meds.sortBy || "name" }}'
       />
-    {{else}}
-      <IndexPage />
+    {{elseif route === '/about'}}
+      <AboutPage />
     {{/if}}
   </article>
 
@@ -26,7 +26,7 @@
   import Header from './components/header'
   import Footer from './components/footer'
 
-  import IndexPage from './pages/home'
+  import AboutPage from './pages/about'
   import MedsPage from './pages/meds'
 
   import Storage from './state/storage'
@@ -38,13 +38,13 @@
       () => ({
         route: window.location.pathname || '/',
         menu: [
-          { href: '/', text: 'home' },
-          { href: '/meds', text: 'meds' },
+          { href: '/', text: 'meds' },
+          { href: '/about', text: 'about' },
         ],
         development: process.env.NODE_ENV === 'development',
         state: {
           meds: {
-            list: [],
+            list: {},
             sortBy: 'name',
           },
         },
@@ -68,7 +68,7 @@
     components: {
       Header,
       Footer,
-      IndexPage,
+      AboutPage,
       MedsPage,
       Storage,
     },
