--- a/src/pages/meds.html
+++ b/src/pages/meds.html
@@ -1,22 +1,22 @@
 <section>
-  <h1>Meds:</h1>
-
-  <button on:click='addMedToggle()'>Add Med</button>
-  {{#if addMedOn }}
-    <AddMedForm on:addMed='addMed(event)' />
-  {{/if}}
-
+  <header class='header'>
+    <h1>Meds:</h1>
+  </header>
+  <AddMedForm on:addMed='addMed(event)' />
   <Meds
     meds='{{ meds }}'
     med='{{ med }}'
+    sortBy='{{ sortBy }}'
     on:addMed='addMed(event)'
     on:removeMed='removeMed(event)'
+    on:updateState='fire("updateState", event)'
   />
 </section>
 
 <script>
   import Meds from '../components/meds'
   import AddMedForm from '../components/add-med-form'
+  import { merge } from '../utils'
 
   export default {
     data: () => ({
@@ -24,27 +24,18 @@
     }),
 
     methods: {
-      addMedToggle() {
-        this.set({ addMedOn: !this.get('addMedOn') })
-      },
-
       addMed({ med }) {
         if (med) {
           const meds = this.get('meds')
-          if (!meds.find(m => m.name === med.name)) {
-            meds.push(med)
-            this.fire('updateState', { meds: { list: meds } })
-          }
+          meds[med.name] = merge(meds[med.name], med)
+
+          this.fire('updateState', { meds: { list: meds } })
         }
       },
 
-      removeMed({ med }) {
+      removeMed(name) {
         const meds = this.get('meds')
-        const medIndex = meds.findIndex(m => m.name === med)
-
-        if (medIndex > -1) {
-          meds.splice(medIndex, 1)
-        }
+        delete meds[name]
 
         this.fire('updateState', { meds: { list: meds } })
       },
@@ -56,3 +47,13 @@
     },
   }
 </script>
+
+<style>
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+  .header button {
+    width: auto;
+  }
+</style>
