update about page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -10,5 +10,8 @@
       Just input the Medications you regularly take and whenever you are at the
       pharmacy just look at the list to see what you have to replenish.
     </p>
+    <p>
+      All Data is kept on your device and will never be uploaded anywhere.
+    </p>
   </div>
 </section>
