add more about text

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -7,11 +7,20 @@
       medication of yourself or another person.
     </p>
     <p>
-      Just input the Medications you regularly take and whenever you are at the
-      pharmacy just look at the list to see what you have to replenish.
+      Just input the Medications you regularly need
+      and whenever you are at the pharmacy
+      you can just look at the list to see what you have to replenish.
     </p>
     <p>
       All Data is kept on your device and will never be uploaded anywhere.
+    </p>
+    <p>
+      This app was written using
+      <a href='https://svelte.technology' target='_blank'>sveltejs</a>
+    </p>
+    <p>
+      To check out the sourcecode, you can visit the
+      <a href='https://github.com/jaeh/meds' target='_blank'>github repository</a>
     </p>
   </div>
 </section>
