--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="index.js"></script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
