--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Meds</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="/meds/reset.css">
   </head>
   <body>
     <div id="root"></div>
