--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang='en-US'>
   <head>
+    <meta charset="utf-8">
     <title>Meds</title>
+    <link rel="icon" href="/meds/favicon.ico">
     <link rel="stylesheet" href="/meds/reset.css">
   </head>
   <body>
