--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Meds</title>
     <link rel="icon" href="/meds/favicon.ico">
+    <link rel="apple-touch-icon" href="/favicon.png"/>
+    <link rel="apple-touch-icon-precomposed" href="/favicon.png"/>
     <link rel="stylesheet" href="/meds/reset.css">
   </head>
   <body>
