--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en-US'>
+<html manifest='manifest.appcache' lang='en-US'>
   <head>
     <meta charset="utf-8">
     <title>Meds</title>
